--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -139,12 +139,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CryptoProvider.cpp" />
+    <ClCompile Include="Session.cpp" />
+    <ClCompile Include="Slot.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="classes.h" />
+    <ClInclude Include="CryptoProvider.h" />
     <ClInclude Include="pkcs11.h" />
     <ClInclude Include="PKCSExceptions.h" />
+    <ClInclude Include="Session.h" />
+    <ClInclude Include="Slot.h" />
     <ClInclude Include="tdef.h" />
+    <ClInclude Include="Token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
