--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CryptoProvider.cpp" />
+    <ClCompile Include="KeyFactory.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="Slot.cpp" />
     <ClCompile Include="Source.cpp" />
