--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -145,13 +145,21 @@
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="Slot.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="temp.cpp" />
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BasicKey.h" />
     <ClInclude Include="classes.h" />
+    <ClInclude Include="CryptoProvider.h" />
+    <ClInclude Include="KeyAES.h" />
+    <ClInclude Include="KeysRSA.h" />
     <ClInclude Include="pkcs11.h" />
     <ClInclude Include="PKCSExceptions.h" />
+    <ClInclude Include="Session.h" />
+    <ClInclude Include="Slot.h" />
     <ClInclude Include="tdef.h" />
+    <ClInclude Include="Token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
